[gd_scene load_steps=5 format=3 uid="uid://bp4wl33rlvtd8"]

[ext_resource type="Theme" uid="uid://cnudye4assl6f" path="res://nodes/ui/ui_theme.tres" id="1_nday2"]
[ext_resource type="Script" path="res://nodes/ui/fittings.gd" id="2_ddwyt"]
[ext_resource type="Texture2D" uid="uid://cjlgjlahh4s4h" path="res://art/progress_round.png" id="3_8nl3k"]
[ext_resource type="Script" path="res://nodes/ui/fitting_container.gd" id="3_f3r0p"]

[node name="Fittings" type="PanelContainer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -90.0
offset_top = -141.0
offset_right = 90.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_nday2")
script = ExtResource("2_ddwyt")

[node name="FittingContainer" type="CenterContainer" parent="." node_paths=PackedStringArray("fittings")]
unique_name_in_owner = true
visible = false
layout_mode = 2
script = ExtResource("3_f3r0p")
fittings = NodePath("..")

[node name="Blank" type="TextureRect" parent="FittingContainer"]
modulate = Color(0, 0, 0, 0.235294)
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("3_8nl3k")
expand_mode = 3

[node name="CycleBar" type="TextureProgressBar" parent="FittingContainer"]
texture_filter = 4
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
step = 0.01
fill_mode = 5
nine_patch_stretch = true
texture_progress = ExtResource("3_8nl3k")
tint_progress = Color(0.839216, 0.364706, 0.054902, 1)

[node name="Button" type="Button" parent="FittingContainer"]
texture_filter = 4
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
disabled = true
expand_icon = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HighSlots" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MidSlots" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="LowSlots" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="FittingContainer/Button" to="FittingContainer" method="_on_button_pressed"]
